--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -9666,15 +9666,12 @@ body.dark,
 .card {
   margin-bottom: 1em;
 }
-.card img {
-  margin: 0;
-}
-figure {
+/* figure {
   text-align: center;
 }
 figure p {
   text-align: center;
-}
+} */
 figure img {
     max-width: 100%;
     height: auto;
@@ -9700,12 +9697,3 @@ MathJax = {
 };
 </script>
 <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.min.js"></script>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-061D8BZJN4"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-061D8BZJN4');
-</script>
