--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,3 +1,4 @@
+<meta name="google-site-verification" content="SjeSLEuX7I3ThPH0lw4rnccUa2Wgv6r8lHoJxplXi6E" />
 <style>
 :root,
 [data-bs-theme=light] {
